fix test, remove whitespace