@@ -30,6 +30,7 @@ import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertTrue;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.StringReader;
 import java.io.StringWriter;
 import java.nio.file.Files;
@@ -76,11 +77,11 @@ public class PrettyPrintTest {
     private static final String DOM_FORMAT_PRETTY_PRINT = "format-pretty-print";
     private static final String JDK_IS_STANDALONE = "jdk-is-standalone";
     private static final String SP_JDK_IS_STANDALONE = "jdk.xml.isStandalone";
-    private static final String XML_LB   
+    private static final String XML_LB
             = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<sometag/>\n";
-    private static final String XML_NOLB 
+    private static final String XML_NOLB
             = "<?xml version=\"1.0\" encoding=\"UTF-8\"?><sometag/>\n";
-    
+
     /*
      * test CDATA, elements only, text and element, xml:space property, mixed
      * node types.
@@ -111,7 +112,7 @@ public class PrettyPrintTest {
             {false, false, false, XML_NOLB} //default
         };
     }
-    
+
     /*
      * Bug: 8249867
      * DataProvider: for verifying the System property
@@ -130,11 +131,11 @@ public class PrettyPrintTest {
 
     /*
      * Bug: 8249867
-     * Verifies the use of the new property "jdk-is-standalone" and the 
+     * Verifies the use of the new property "jdk-is-standalone" and the
      * corresponding System property "jdk.xml.isStandalone".
      */
     @Test(dataProvider = "setting")
-    public void test(boolean p, boolean sp, boolean val, String expected) 
+    public void test(boolean p, boolean sp, boolean val, String expected)
             throws Exception {
         if (sp) {
             setSystemProperty(SP_JDK_IS_STANDALONE, Boolean.toString(val));
@@ -154,7 +155,7 @@ public class PrettyPrintTest {
         output.setCharacterStream(writer);
         ser.write(document, output);
         String result = writer.toString();
-        
+
         Assert.assertEquals(result, expected);
     }
 
@@ -168,7 +169,7 @@ public class PrettyPrintTest {
         setSystemProperty(SP_JDK_IS_STANDALONE, value);
         DOMConfiguration c = getConfig();
         clearSystemProperty(SP_JDK_IS_STANDALONE);
-        
+
         Assert.assertEquals(c.getParameter(JDK_IS_STANDALONE), expected);
     }
 
@@ -179,22 +180,22 @@ public class PrettyPrintTest {
      *
      */
     @Test(dataProvider = "xml-data")
-    public void testXMLPrettyPrint(String sourceFile, String expectedFile) 
+    public void testXMLPrettyPrint(String sourceFile, String expectedFile)
             throws Exception {
         String source = read(sourceFile);
         String expected = read(expectedFile);
         // test it's no change if no pretty-print
         String result = serializerWrite(toXmlDocument(source), false);
-        assertTrue(toXmlDocument(source).isEqualNode(toXmlDocument(result)), 
+        assertTrue(toXmlDocument(source).isEqualNode(toXmlDocument(result)),
                 "The actual is: " + result);
         // test pretty-print
         assertEquals(serializerWrite(toXmlDocument(source), true), expected);
         // test it's no change if no pretty-print
         result = transform(toXmlDocument(source), false);
-        assertTrue(toXmlDocument(source).isEqualNode(toXmlDocument(result)), 
+        assertTrue(toXmlDocument(source).isEqualNode(toXmlDocument(result)),
                 "The actual is: " + result);
         // test pretty-print
-        assertEquals(transform(toXmlDocument(source), true).replaceAll("\r\n", "\n"), 
+        assertEquals(transform(toXmlDocument(source), true).replaceAll("\r\n", "\n"),
                 expected);
     }
 
@@ -257,13 +258,13 @@ public class PrettyPrintTest {
      *
      */
     @Test(dataProvider = "xml-data-whitespace-ls")
-    public void testWhitespaceWithLSSerializer(String sourceFile, String expectedFile) 
+    public void testWhitespaceWithLSSerializer(String sourceFile, String expectedFile)
             throws Exception {
         String source = read(sourceFile);
         String expected = read(expectedFile);
         // test it's no change if no pretty-print
         String result = serializerWrite(toXmlDocument(source), false);
-        assertTrue(toXmlDocument(source).isEqualNode(toXmlDocument(result)), 
+        assertTrue(toXmlDocument(source).isEqualNode(toXmlDocument(result)),
                 "The actual is: " + result);
         // test pretty-print
         assertEquals(serializerWrite(toXmlDocument(source), true), expected);
@@ -286,16 +287,16 @@ public class PrettyPrintTest {
      *
      */
     @Test(dataProvider = "xml-data-whitespace-xslt")
-    public void testWhitespaceWithTransformer(String sourceFile, String expectedFile) 
+    public void testWhitespaceWithTransformer(String sourceFile, String expectedFile)
             throws Exception {
         String source = read(sourceFile);
         String expected = read(expectedFile);
         // test it's no change if no pretty-print
         String result = transform(toXmlDocument(source), false);
-        assertTrue(toXmlDocument(source).isEqualNode(toXmlDocument(result)), 
+        assertTrue(toXmlDocument(source).isEqualNode(toXmlDocument(result)),
                 "The actual is: " + result);
         // test pretty-print
-        assertEquals(transform(toXmlDocument(source), true).replaceAll("\r\n", "\n"), 
+        assertEquals(transform(toXmlDocument(source), true).replaceAll("\r\n", "\n"),
                 expected);
     }
 
@@ -321,7 +322,7 @@ public class PrettyPrintTest {
      *
      */
     @Test(dataProvider = "html-data")
-    public void testTransformToHTML(String sourceFile, String expectedFile) 
+    public void testTransformToHTML(String sourceFile, String expectedFile)
             throws Exception {
         String source = read(sourceFile);
         String expected = read(expectedFile);
@@ -329,7 +330,7 @@ public class PrettyPrintTest {
         StringWriter writer = new StringWriter();
         getTransformer(true, false).transform(
                 new StreamSource(new StringReader(source)), new StreamResult(writer));
-        assertTrue(toXmlDocument(source).isEqualNode(toXmlDocument(writer.toString())), 
+        assertTrue(toXmlDocument(source).isEqualNode(toXmlDocument(writer.toString())),
                 "The actual is: " + writer.toString());
 
         // test pretty-print
@@ -357,7 +358,7 @@ public class PrettyPrintTest {
         String value = "schemas";
         transformer.setParameter(key, value);
         StringWriter writer = new StringWriter();
-        transformer.transform(new StreamSource(new StringReader(read(xml))), 
+        transformer.transform(new StreamSource(new StringReader(read(xml))),
                 new StreamResult(writer));
         assertEquals(writer.toString().replaceAll("\r\n", "\n"), read(expectedOutput));
     }
@@ -378,7 +379,7 @@ public class PrettyPrintTest {
                 + "<child><children/><children/></child>"
                 + "after child element</hello>";
 
-        final String XML_DOCUMENT_PRETTY_PRINT = 
+        final String XML_DOCUMENT_PRETTY_PRINT =
                 "<?xml version=\"1.0\" encoding=\"UTF-16\"?><hello>\n" +
                 "    before child element\n" +
                 "    <child>\n" +
@@ -416,72 +417,72 @@ public class PrettyPrintTest {
         DOMImplementationLS domImplementationLS = (DOMImplementationLS) domImplementation;
         LSSerializer lsSerializer = domImplementationLS.createLSSerializer();
 
-        System.out.println("Serializer is: " + lsSerializer.getClass().getName() 
+        System.out.println("Serializer is: " + lsSerializer.getClass().getName()
                 + " " + lsSerializer);
 
         // get configuration
         DOMConfiguration domConfiguration = lsSerializer.getDomConfig();
 
         // query current configuration
-        Boolean defaultFormatPrettyPrint = 
+        Boolean defaultFormatPrettyPrint =
                 (Boolean) domConfiguration.getParameter(DOM_FORMAT_PRETTY_PRINT);
-        Boolean canSetFormatPrettyPrintFalse = 
+        Boolean canSetFormatPrettyPrintFalse =
                 (Boolean) domConfiguration.canSetParameter(DOM_FORMAT_PRETTY_PRINT, Boolean.FALSE);
-        Boolean canSetFormatPrettyPrintTrue = 
+        Boolean canSetFormatPrettyPrintTrue =
                 (Boolean) domConfiguration.canSetParameter(DOM_FORMAT_PRETTY_PRINT, Boolean.TRUE);
 
-        System.out.println(DOM_FORMAT_PRETTY_PRINT + " default/can set false/can set true = " 
+        System.out.println(DOM_FORMAT_PRETTY_PRINT + " default/can set false/can set true = "
                 + defaultFormatPrettyPrint + "/"
                 + canSetFormatPrettyPrintFalse + "/" + canSetFormatPrettyPrintTrue);
 
         // test values
-        assertEquals(defaultFormatPrettyPrint, Boolean.FALSE, 
+        assertEquals(defaultFormatPrettyPrint, Boolean.FALSE,
                 "Default value of " + DOM_FORMAT_PRETTY_PRINT + " should be " + Boolean.FALSE);
 
-        assertEquals(canSetFormatPrettyPrintFalse, Boolean.TRUE, 
+        assertEquals(canSetFormatPrettyPrintFalse, Boolean.TRUE,
                 "Can set " + DOM_FORMAT_PRETTY_PRINT + " to " + Boolean.FALSE + " should be "
                 + Boolean.TRUE);
 
-        assertEquals(canSetFormatPrettyPrintTrue, Boolean.TRUE, 
+        assertEquals(canSetFormatPrettyPrintTrue, Boolean.TRUE,
                 "Can set " + DOM_FORMAT_PRETTY_PRINT + " to " + Boolean.TRUE + " should be "
                 + Boolean.TRUE);
 
         // get default serialization
         String prettyPrintDefault = lsSerializer.writeToString(document);
-        System.out.println("(default) " + DOM_FORMAT_PRETTY_PRINT + "==" 
+        System.out.println("(default) " + DOM_FORMAT_PRETTY_PRINT + "=="
                 + (Boolean) domConfiguration.getParameter(DOM_FORMAT_PRETTY_PRINT)
                 + ": \n\"" + prettyPrintDefault + "\"");
 
-        assertEquals(prettyPrintDefault, XML_DOCUMENT_DEFAULT_PRINT, 
+        assertEquals(prettyPrintDefault, XML_DOCUMENT_DEFAULT_PRINT,
                 "Invalid serialization with default value, " + DOM_FORMAT_PRETTY_PRINT + "=="
                 + (Boolean) domConfiguration.getParameter(DOM_FORMAT_PRETTY_PRINT));
 
         // configure LSSerializer to not format-pretty-print
         domConfiguration.setParameter(DOM_FORMAT_PRETTY_PRINT, Boolean.FALSE);
         String prettyPrintFalse = lsSerializer.writeToString(document);
-        System.out.println("(FALSE) " + DOM_FORMAT_PRETTY_PRINT + "==" 
+        System.out.println("(FALSE) " + DOM_FORMAT_PRETTY_PRINT + "=="
                 + (Boolean) domConfiguration.getParameter(DOM_FORMAT_PRETTY_PRINT)
                 + ": \n\"" + prettyPrintFalse + "\"");
 
-        assertEquals(prettyPrintFalse, XML_DOCUMENT_DEFAULT_PRINT, 
+        assertEquals(prettyPrintFalse, XML_DOCUMENT_DEFAULT_PRINT,
                 "Invalid serialization with FALSE value, " + DOM_FORMAT_PRETTY_PRINT + "=="
                 + (Boolean) domConfiguration.getParameter(DOM_FORMAT_PRETTY_PRINT));
 
         // configure LSSerializer to format-pretty-print
         domConfiguration.setParameter(DOM_FORMAT_PRETTY_PRINT, Boolean.TRUE);
         String prettyPrintTrue = lsSerializer.writeToString(document);
-        System.out.println("(TRUE) " + DOM_FORMAT_PRETTY_PRINT + "==" 
+        System.out.println("(TRUE) " + DOM_FORMAT_PRETTY_PRINT + "=="
                 + (Boolean) domConfiguration.getParameter(DOM_FORMAT_PRETTY_PRINT)
                 + ": \n\"" + prettyPrintTrue + "\"");
 
-        assertEquals(prettyPrintTrue, XML_DOCUMENT_PRETTY_PRINT, 
+        assertEquals(prettyPrintTrue, XML_DOCUMENT_PRETTY_PRINT,
                 "Invalid serialization with TRUE value, " + DOM_FORMAT_PRETTY_PRINT + "=="
                 + (Boolean) domConfiguration.getParameter(DOM_FORMAT_PRETTY_PRINT));
     }
 
     private String serializerWrite(Node xml, boolean pretty) throws Exception {
         DOMImplementationRegistry registry = DOMImplementationRegistry.newInstance();
-        DOMImplementationLS domImplementation = 
+        DOMImplementationLS domImplementation =
                 (DOMImplementationLS) registry.getDOMImplementation("LS");
         StringWriter writer = new StringWriter();
         LSOutput formattedOutput = domImplementation.createLSOutput();
@@ -580,8 +581,9 @@ public class PrettyPrintTest {
 
 
     private String read(String filename) throws Exception {
-        return new String(Files.readAllBytes(
-                Paths.get(getClass().getResource(filename).getPath())));
+        try (InputStream in = PrettyPrintTest.class.getResourceAsStream(filename)) {
+            return new String(in.readAllBytes());
+        }
     }
 
     private Document getDocument() throws Exception {
@@ -593,12 +595,12 @@ public class PrettyPrintTest {
         document.appendChild(child);
         return document;
     }
-    
+
     private DOMImplementationLS getImpl() throws Exception {
         Document document = getDocument();
         return (DOMImplementationLS)document.getImplementation();
     }
-    
+
     private DOMConfiguration getConfig() throws Exception {
         LSSerializer ser = getImpl().createLSSerializer();
         return ser.getDomConfig();
